
[package]
name = "hive_news"
version = "0.0.1"
description = "The purpose of this contract is to track the upvote and downvote action in the news decentralized authenticable application. It will manage user, news and votes for the solution. "
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hive_news"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"